--- a/doc/rdebug.1
+++ b/doc/rdebug.1
@@ -165,6 +165,11 @@ Port used for control commands.
 Set $DEBUG true.
 .TP
 .B \-\-emacs
+Activates full GNU Emacs mode. Is the equivalent of setting the
+options \-\-emacs\-basic, \-\-annotate=3, \-\-no-stop, \-\-no\-control
+and \-\-post\-mortem.
+.TP
+.B \-\-emacs-basic
 Activates GNU Emacs mode. Debugger prompts are prefaced with two octal
 032 characters.
 .TP
