--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -1416,6 +1416,7 @@ require "ruby-debug/debugger"
 * PrintCommands::            Evaluating and Printing Expressions (p, pp, ps, pp, irb)
 * PrintVars::                Printing Variables (var)
 * List::                     Examining Program Source Files (list)
+* Edit::                     Editing source files (edit)
 * FrameCommands::            Examining the stack frame (where, up, down, frame)
 * Stopping::                 Stopping and continuing (break, watch, step, cont...)
 * ruby-debug settings::      rdebug-settings (set args, set autoeval, ...)
@@ -1937,6 +1938,43 @@ so it is equivalent to typing just @code{list}.  This is more useful
 than listing the same lines again.  An exception is made for an
 argument of @samp{-}; that argument is preserved in repetition so that
 each repetition moves up in the source file.
+
+@node Edit
+@section Editing Source files (@samp{edit})
+
+To edit the lines in a source file, use the @code{edit} command.  The
+editing program of your choice is invoked with the current line set to
+the active line in the program.  Alternatively, you can give a line
+specification to specify what part of the file you want to print if
+you want to see other parts of the program.
+
+You can customize to use any editor you want by using the
+@code{EDITOR} environment variable. The only restriction is that your
+editor (say @code{ex}), recognizes the following command-line syntax:
+@smallexample
+ex +@var{number} file
+@end smallexample
+The optional numeric value +@var{number} specifies the number of the
+line in the file where to start editing.  For example, to configure
+@value{DBG} to use the @code{vi} editor, you could use these commands
+with the @code{sh} shell:
+@smallexample
+EDITOR=/usr/bin/vi
+export EDITOR
+gdb @dots{}
+@end smallexample
+or in the @code{csh} shell,
+@smallexample
+setenv EDITOR /usr/bin/vi
+gdb @dots{}
+@end smallexample
+
+@table @code
+@kindex edit @ovar{line-specification}
+@item edit @ovar{line specification}
+Edit line specification using the editor specified by the
+@code{EDITOR} environment variable.
+@end table
 
 @node FrameCommands
 @section Examining the Stack Frame (@samp{where}, @samp{up}, @samp{down}, @samp{frame})
