rdebug: do syntax checking when running as server as well as local interface. --no-quit intercepts Syntax Errors now (which shouldn't happen and means there's another bug in there to fix; but robustness is good.) Bring tdebug.rb more in line iwth rdebug until we can get rid of it altogether. Note some of the current weaknesses.

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,8 @@
   abbreviated "var c"; use "var co" (or const or constant).
 - columnize now pulled in from a separate package.
 - add "condition" command. Allow removal of condition.
+- $0 == __FILE__ when running rdebug should work -- most of the time. See
+  comments in code for a better solution.
 
 0.10.0
 - '-r' option can be used to require additional libraries.
